--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,55 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Pic Bucket</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        p {
-            font-size: 1.2em;
-            margin-bottom: 20px;
-        }
-
-        a {
-            color: #4CAF50;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-
-<body>
+{{define "page"}}
     <header>
         <h1>Contact Us</h1>
     </header>
-
-    <div class="container">
+    <div>
         <p>You can get in touch with me at <a href="mailto:altamashattari786@gmail.com">altamashattari786@gmail.com</a>. Feel free to reach out via email for any inquiries or assistance related to Pic Bucket.</p>
     </div>
-</body>
-
-</html>
+{{end}}
