--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -1,3 +1,3 @@
-{{define "page"}}
-    <h1>Welcome to Picbucket</h1>
-{{end}}
+{{template "header" .}}
+<h1>Welcome to Picbucket</h1>
+{{template "footer" .}}
