--- a/templates/faq.gohtml
+++ b/templates/faq.gohtml
@@ -2,7 +2,7 @@
     <header>
         <h1>FAQ - Pic Bucket</h1>
     </header>
-    <div class="container">
+    <div>
         {{range .}}
             {{template "qa" .}}
         {{end}}
