--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -7,11 +7,43 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+  <header class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white">
+  <nav class="px-8 py-6 flex items-center space-x-12">
+    <div class="text-4xl font-serif">Picbucket</div>
+    <div class="flex-grow">
+      <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/">
+        Home
+      </a>
+      <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/contact">
+        Contact
+      </a>
+      <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/faq">
+        FAQ
+      </a>
+    </div>
+    <div class="space-x-4">
+      <a href="#">Sign in</a>
+      <a href="#" class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded">
+        Sign up
+      </a>
+    </div>
+  </nav>
+</header>
 {{end}}
 
 <!-- Page content -->
 
 {{define "footer"}}
+<footer
+  class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white text-center lg:text-left absolute bottom-0 w-full">
+  <div class="p-4 text-center text-neutral-700 dark:text-neutral-200">
+    © 2023 Copyright:
+    <a
+      href="/"
+      >Picbucket</a
+    >
+  </div>
+</footer>
 </body>
 </html>
 {{end}}
