--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -35,7 +35,7 @@
 
 {{define "footer"}}
 <footer
-  class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white text-center lg:text-left absolute bottom-0 w-full">
+  class="fixed bottom-0 bg-gradient-to-r from-blue-800 to-indigo-800 text-white text-center lg:text-left w-full">
   <div class="p-4 text-center text-neutral-700 dark:text-neutral-200">
     © 2023 Copyright:
     <a
