--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="min-h-screen bg-gray-100">
   <header class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white">
   <nav class="px-8 py-6 flex items-center space-x-12">
     <div class="text-4xl font-serif">Picbucket</div>
@@ -23,7 +23,7 @@
     </div>
     <div class="space-x-4">
       <a href="#">Sign in</a>
-      <a href="#" class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded">
+      <a href="/signup" class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded">
         Sign up
       </a>
     </div>
