added email query param to sign up form and format

--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,8 +1,13 @@
 {{template "header" .}}
 <header>
-        <h1>Contact Us</h1>
-    </header>
-    <div>
-        <p>You can get in touch with me at <a href="mailto:altamashattari786@gmail.com">altamashattari786@gmail.com</a>. Feel free to reach out via email for any inquiries or assistance related to Pic Bucket.</p>
-    </div>
+  <h1>Contact Us</h1>
+</header>
+<div>
+  <p>
+    You can get in touch with me at
+    <a href="mailto:altamashattari786@gmail.com">altamashattari786@gmail.com</a
+    >. Feel free to reach out via email for any inquiries or assistance related
+    to Pic Bucket.
+  </p>
+</div>
 {{template "footer" .}}
