--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -1,28 +1,60 @@
 {{template "header" .}}
 <div class="flex flex-col items-center justify-center mt-16">
-    <h2 class="text-2xl font-semibold mb-6">Start sharing your photos today</h2>
-    <form class="bg-white p-8 rounded shadow-md w-1/3" action="/users" method="post">
-        <div class="mb-4">
-            <label for="email" class="block text-sm font-medium text-gray-600 mb-1">Email Address</label>
-            <input type="email" id="email" name="email" required
-                class="w-full p-2 border rounded-md focus:ring focus:ring-indigo-200">
-        </div>
-        <div class="mb-4">
-            <label for="password" class="block text-sm font-medium text-gray-600 mb-1">Password</label>
-            <input type="password" id="password" name="password" required
-                class="w-full p-2 border rounded-md focus:ring focus:ring-indigo-200">
-        </div>
-        <div class="flex justify-between items-center mb-4 text-xs text-gray-500">
-            <span>Already have an account? <a href="/signin" class="text-indigo-500 hover:underline">Sign in</a></span>
-            <a href="/reset-pw" class="text-indigo-500 hover:underline">Forgot your password?</a>
-        </div>
-        <div class="flex items-center justify-center">
-            <button type="submit"
-                class="w-full bg-indigo-500 text-white p-2 rounded-md hover:bg-indigo-600 focus:outline-none focus:ring focus:ring-indigo-200">
-                Sign up
-            </button>
-        </div>
-    </form>
+  <h2 class="text-2xl font-semibold mb-6">Start sharing your photos today</h2>
+  <form
+    class="bg-white p-8 rounded shadow-md w-1/3"
+    action="/users"
+    method="post"
+  >
+    <div class="mb-4">
+      <label for="email" class="block text-sm font-medium text-gray-600 mb-1"
+        >Email Address</label
+      >
+      <input
+        type="email"
+        id="email"
+        name="email"
+        value="{{.Email}}"
+        required
+        class="w-full p-2 border rounded-md focus:ring focus:ring-indigo-200"
+        {{if
+        not
+        .Email}}autofocus{{end}}
+      />
+    </div>
+    <div class="mb-4">
+      <label for="password" class="block text-sm font-medium text-gray-600 mb-1"
+        >Password</label
+      >
+      <input
+        type="password"
+        id="password"
+        name="password"
+        required
+        class="w-full p-2 border rounded-md focus:ring focus:ring-indigo-200"
+        {{if
+        .Email}}autofocus{{end}}
+      />
+    </div>
+    <div class="flex justify-between items-center mb-4 text-xs text-gray-500">
+      <span
+        >Already have an account?
+        <a href="/signin" class="text-indigo-500 hover:underline"
+          >Sign in</a
+        ></span
+      >
+      <a href="/reset-pw" class="text-indigo-500 hover:underline"
+        >Forgot your password?</a
+      >
+    </div>
+    <div class="flex items-center justify-center">
+      <button
+        type="submit"
+        class="w-full bg-indigo-500 text-white p-2 rounded-md hover:bg-indigo-600 focus:outline-none focus:ring focus:ring-indigo-200"
+      >
+        Sign up
+      </button>
+    </div>
+  </form>
 </div>
 {{template "footer" .}}
-
