--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -1,49 +1,53 @@
 {{define "header"}}
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="min-h-screen bg-gray-100">
-  <header class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white">
-  <nav class="px-8 py-6 flex items-center space-x-12">
-    <div class="text-4xl font-serif">Picbucket</div>
-    <div class="flex-grow">
-      <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/">
-        Home
-      </a>
-      <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/contact">
-        Contact
-      </a>
-      <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/faq">
-        FAQ
-      </a>
-    </div>
-    <div class="space-x-4">
-      <a href="#">Sign in</a>
-      <a href="/signup" class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded">
-        Sign up
-      </a>
-    </div>
-  </nav>
-</header>
-{{end}}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="min-h-screen bg-gray-100">
+    <header class="bg-gradient-to-r from-blue-800 to-indigo-800 text-white">
+      <nav class="px-8 py-6 flex items-center space-x-12">
+        <div class="text-4xl font-serif">Picbucket</div>
+        <div class="flex-grow">
+          <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/">
+            Home
+          </a>
+          <a
+            class="text-lg font-semibold hover:text-blue-100 pr-8"
+            href="/contact"
+          >
+            Contact
+          </a>
+          <a class="text-lg font-semibold hover:text-blue-100 pr-8" href="/faq">
+            FAQ
+          </a>
+        </div>
+        <div class="space-x-4">
+          <a href="#">Sign in</a>
+          <a
+            href="/signup"
+            class="px-4 py-2 bg-blue-700 hover:bg-blue-600 rounded"
+          >
+            Sign up
+          </a>
+        </div>
+      </nav>
+    </header>
+    {{ end }}
 
-<!-- Page content -->
+    <!-- Page content -->
 
-{{define "footer"}}
-<footer
-  class="fixed bottom-0 bg-gradient-to-r from-blue-800 to-indigo-800 text-white text-center lg:text-left w-full">
-  <div class="p-4 text-center text-neutral-700 dark:text-neutral-200">
-    © 2023 Copyright:
-    <a
-      href="/"
-      >Picbucket</a
+    {{define "footer"}}
+    <footer
+      class="fixed bottom-0 bg-gradient-to-r from-blue-800 to-indigo-800 text-white text-center lg:text-left w-full"
     >
-  </div>
-</footer>
-</body>
+      <div class="p-4 text-center text-neutral-700 dark:text-neutral-200">
+        © 2023 Copyright:
+        <a href="/">Picbucket</a>
+      </div>
+    </footer>
+  </body>
 </html>
-{{end}}
+{{ end }}
