--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -25,6 +25,12 @@
           </a>
         </div>
         <div class="space-x-4">
+          <form action="/signout" method="post" class="inline pr-4">
+            <div class="hidden">
+              {{csrfField}}
+            </div>
+            <button type="submit">Sign out</button>
+          </form>
           <a href="/signin">Sign in</a>
           <a
             href="/signup"
