--- a/templates/tailwind.gohtml
+++ b/templates/tailwind.gohtml
@@ -25,12 +25,14 @@
           </a>
         </div>
         <div class="space-x-4">
+          {{if currentUser}}
           <form action="/signout" method="post" class="inline pr-4">
             <div class="hidden">
-              {{csrfField}}
+              {{ csrfField }}
             </div>
             <button type="submit">Sign out</button>
           </form>
+          {{else}}
           <a href="/signin">Sign in</a>
           <a
             href="/signup"
@@ -38,6 +40,7 @@
           >
             Sign up
           </a>
+          {{ end }}
         </div>
       </nav>
     </header>
