forgot pw template

--- a/templates/signin.gohtml
+++ b/templates/signin.gohtml
@@ -46,7 +46,7 @@
           >Sign up</a
         ></span
       >
-      <a href="/reset-pw" class="text-indigo-500 hover:underline"
+      <a href="/forgot-pw" class="text-indigo-500 hover:underline"
         >Forgot your password?</a
       >
     </div>
