--- a/templates/forgot-password.gohtml
+++ b/templates/forgot-password.gohtml
@@ -1,9 +1,9 @@
 {{template "header" .}}
 <div class="flex flex-col items-center justify-center mt-16">
-  <h2 class="text-2xl font-semibold mb-6">Start sharing your photos today</h2>
+  <h2 class="text-2xl font-semibold mb-6">Reset Your Password</h2>
   <form
     class="bg-white p-8 rounded shadow-md w-1/3"
-    action="/users"
+    action="/forgot-pw"
     method="post"
   >
     <div class="hidden">
@@ -25,29 +25,12 @@
         .Email}}autofocus{{end}}
       />
     </div>
-    <div class="mb-4">
-      <label for="password" class="block text-sm font-medium text-gray-600 mb-1"
-        >Password</label
-      >
-      <input
-        type="password"
-        id="password"
-        name="password"
-        required
-        class="w-full p-2 border rounded-md focus:ring focus:ring-indigo-200"
-        {{if
-        .Email}}autofocus{{end}}
-      />
-    </div>
     <div class="flex justify-between items-center mb-4 text-xs text-gray-500">
       <span
-        >Already have an account?
+        >Remember your password?
         <a href="/signin" class="text-indigo-500 hover:underline"
           >Sign in</a
         ></span
-      >
-      <a href="/forgot-pw" class="text-indigo-500 hover:underline"
-        >Forgot your password?</a
       >
     </div>
     <div class="flex items-center justify-center">
@@ -55,7 +38,7 @@
         type="submit"
         class="w-full bg-indigo-500 text-white p-2 rounded-md hover:bg-indigo-600 focus:outline-none focus:ring focus:ring-indigo-200"
       >
-        Sign up
+        Reset Password
       </button>
     </div>
   </form>
