env var updates

--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,13 +1,9 @@
 {{template "header" .}}
-<header>
-  <h1>Contact Us</h1>
-</header>
-<div>
-  <p>
-    You can get in touch with me at
-    <a href="mailto:altamashattari786@gmail.com">altamashattari786@gmail.com</a
-    >. Feel free to reach out via email for any inquiries or assistance related
-    to Pic Bucket.
-  </p>
+<div class="flex flex-col items-center justify-center mt-16">
+  <h2 class="text-2xl font-semibold mb-6">Contact Us</h2>
+  <div class="mb-4 text-gray-600">
+    If you have any questions or concerns, feel free to reach out to us at:
+    <a href="mailto:altamashattari786@gmail.com" class="text-indigo-500 hover:underline">altamashattari786@gmail.com</a>.
+  </div>
 </div>
 {{template "footer" .}}
