--- a/templates/galleries/show.gohtml
+++ b/templates/galleries/show.gohtml
@@ -4,12 +4,14 @@
     <div class="columns-4 gap-4 space-y-4">
         {{range .Images}}
             <div class="h-min w-full">
-                <img
-                    src="{{.}}"
+                <a href="/galleries/{{.GalleryID}}/images/{{.FilenameEscaped}}">
+                    <img
+                    src="/galleries/{{.GalleryID}}/images/{{.FilenameEscaped}}"
                     alt="Gallery Image"
                     class="w-full"
                     loading="lazy"
                 />
+                </a>
             </div>
         {{end}}
     </div>
