--- a/templates/galleries/edit.gohtml
+++ b/templates/galleries/edit.gohtml
@@ -24,28 +24,63 @@
       />
     </div>
     <button
-        type="submit"
-        class="w-1/2 bg-indigo-500 text-white p-2 rounded-md hover:bg-indigo-600 focus:outline-none focus:ring focus:ring-indigo-200"
-      >
-        Save Changes
-      </button>
-  </form>
-  <form
-    action="/galleries/{{.ID}}/delete"
-    method="post"
-    class="inline"
-    onsubmit="return confirm('Are you sure you want to delete this gallery?')"
-  >
-    <div class="hidden">
-      {{ csrfField }}
-    </div>
-    <button
       type="submit"
-      class="text-red-500 hover:underline focus:outline-none"
+      class="w-1/2 bg-indigo-500 text-white p-2 rounded-md hover:bg-indigo-600 focus:outline-none focus:ring focus:ring-indigo-200"
     >
-      Delete
+      Save Changes
     </button>
   </form>
+  <div class="px-8 pt-12 w-full pb-24">
+    <h2 class="text-2xl font-semibold mb-6">Current Images</h2>
+    <div class="py-2 grid grid-cols-8 gap-2">
+      {{ range.Images }}
+      <div class="h-min w-full relative">
+        <div class="absolute top-2 right-2">
+          {{template "delete_image_form" .}}
+        </div>
+        <img
+          src="/galleries/{{.GalleryID}}/images/{{.FilenameEscaped}}"
+          alt="Gallery Image"
+          class="w-full"
+          loading="lazy"
+        />
+      </div>
+      {{ end }}
+    </div>
+  </div>
+  <div>
+    <form
+      action="/galleries/{{.ID}}/delete"
+      method="post"
+      class="inline"
+      onsubmit="return confirm('Are you sure you want to delete this gallery?')"
+    >
+      <div class="hidden">
+        {{ csrfField }}
+      </div>
+      <button
+        type="submit"
+        class="text-red-500 hover:underline focus:outline-none"
+      >
+        Delete Album
+      </button>
+    </form>
+  </div>
 </div>
 
 {{template "footer" .}}
+
+{{define "delete_image_form"}}
+  <form
+    action="/galleries/{{.GalleryID}}/images/{{.FilenameEscaped}}/delete"
+    method="post"
+    onsubmit="return confirm('Do you really want to delete this image?');"
+  >
+  {{csrfField}}
+  <button
+    class="p-1 text-xs text-red-800 bg-red-100 border border-red-400 rounded"
+  >
+    Delete
+  </button>
+  </form>
+{{end}}
