--- a/templates/galleries/edit.gohtml
+++ b/templates/galleries/edit.gohtml
@@ -30,6 +30,9 @@
       Save Changes
     </button>
   </form>
+  <div class="py-4">
+    {{template "upload_image_form" .}}
+  </div>
   <div class="px-8 pt-12 w-full pb-24">
     <h2 class="text-2xl font-semibold mb-6">Current Images</h2>
     <div class="py-2 grid grid-cols-8 gap-2">
@@ -81,6 +84,35 @@
     class="p-1 text-xs text-red-800 bg-red-100 border border-red-400 rounded"
   >
     Delete
+  </button>
+  </form>
+{{end}}
+
+{{define "upload_image_form"}}
+  <form
+    action="/galleries/{{.ID}}/images"
+    method="post"
+    enctype="multipart/form-data"
+  >
+  {{csrfField}}
+  <div class="py-2">
+    <label for="images" class="block mb-2 text-sm font-semibold text-gray-800">
+      Add Images
+      <p class="py-2 text-xs text-gray-600 font-normal">
+        Please upload only jpg, jpeg, png and git files.
+      </p>
+    </label>
+    <input
+      type="file"
+      multiple
+      accept="image/png,image/jpeg,image/gif"
+      id="images"
+      name="images"
+    />
+  </div>
+  <button
+    class="py-2 px-8 bg-indigo-600 hover:bg-indigo-700 text-white text-lg font-bold rounded">
+    Upload
   </button>
   </form>
 {{end}}
