content type validation

--- a/templates/galleries/edit.gohtml
+++ b/templates/galleries/edit.gohtml
@@ -99,7 +99,7 @@
     <label for="images" class="block mb-2 text-sm font-semibold text-gray-800">
       Add Images
       <p class="py-2 text-xs text-gray-600 font-normal">
-        Please upload only jpg, jpeg, png and git files.
+        Please upload only jpg, jpeg, png and gif files.
       </p>
     </label>
     <input
